# sphere

./: .gitignore  AUTHORS  Makefile.am  README.org  README.txt  bootstrap  configure.ac  generate-test-cases.sh  install-tools.sh  install.sh  run-demo.sh
arrays/: simple-array.hh
integrate/: coeffs-abm.hh  coeffs-amm.hh  integr-abm.hh  integr-amm.hh  integr-base.hh  integr-pk.hh  integr-rk.hh  integrate.hh
sorting/: getpointee.hh  histogram.hh  prefixsum.hh
sph/: Makefile.am
sph/octave/: Makefile.am  absmax.m  absmean.m  concatMat.m  convertSphysicsConfig.m  dnorm3.m  doPlotH5Series_box.m  doPlotH5Series_wehr.m  doplotad.m  drawplane.m  dumpascii.m  enum.m  extractH5PartSeries.m  extractVTKSeries.m  filename_dir.m  filename_notdir.m  filename_stem.m  fillplane.m  gammaeq.m  genBox.m  genBoxHelp.m  genBoxLochRechts.m  genBoxLochUnten.m  genChannel2.m  genChannel2Capped.m  genChannel3.m  genPipe.m  genPipe90.m  genScene3Slides.m  genSceneArtesianWellWithBottom.m  genSceneBox.m  genSceneBoxTriang.m  genSceneContainerWith3Slides.m  genSceneContainerWithPipe.m  genSceneContainerWithPipe2.m  genSceneStairs.m  genSceneTable.m  genStair.m  genTreppe.m  genUTube.m  (+50 more)
sph/settings/: colors.txt
sph/sh/: Makefile.am  genbox-2d.py  genbox2-2d.py  genline-2d.py  genutube-2d.py  h52vtk.sh  obstacle-triang-2d.py  primitives2d.py  run-sph.sh  sphere  stair-2d.py  triang-2d.py
sph/sh/scenes/: beispiel.sh  boundary.sh
sph/sh/scenes/1D/: burgers.sh  ein-partikel-eingesperrt.sh  linie.sh  stempel.sh
sph/sh/scenes/2D/: artesian-fountain.sh  bar.sh  box-drop-ad.sh  box-drop-large.sh  box-drop.sh  box-filled-large.sh  box-filled.sh  box-stack.sh  circle.sh  dambreak-obstacle-triang.sh  dambreak.sh  ein-partikel-auf-linie.sh  falling-film-hex.sh  falling-film-triang.sh  falling-film-vert.sh  falling-film.sh  flying-circle.sh  flying-square.sh  fountain.sh  line.sh  pattern-rect-cart.sh  pattern-rect-hex-odd.sh  pattern-rect-hex.sh  pattern-test.sh  periodic-boundary-test.sh  poiseuille-flow-hex.sh  poiseuille-flow-obstacle.sh  poiseuille-flow.sh  rechtecke-highres.sh  rechtecke.sh  shock-tube.sh  square.sh  szene-tafel2.sh  treppe.sh  treppe11.sh  treppe12.sh  treppe22.sh  treppe3.sh  treppe5.sh  utube.sh  (+1 more)
sph/sh/scenes/3D/: box-drop-ad.sh  box-drop-large.sh  box-drop.sh  dambreak-obstacle-triang.sh  dambreak.sh  falling-film.sh  flying-ball.sh  fountain.sh  fountain2.sh  one-block.sh  pattern-test.sh  szene-tafel-schraeg.sh  szene-tafel1.sh  szene-tafel2.sh  szene1-gefuellt.sh  szene1-highres.sh  szene1.sh  szene2-highres-viel-wasser.sh  szene2-highres.sh  szene2-viel-wasser.sh  szene2-voll-wasser.sh  szene2.sh  szene3-voll-wasser.sh  szene4-voll-wasser.sh  treppe21.sh  treppe3.sh  treppe5.sh  two-blocks.sh
sph/share/sph/: octave
sph/src/: Makefile.am  common.hh  constants.hh  counter.hh  counting-sort.hh  counttest.cc  druck.hh  fill-patterns.ncd.xml  h5part-writer.hh  index-test.cc  index.hh  indirectsort.hh  kernel-test-1d.cc  kernel-test-2d.cc  kernel-test.cc  kernels.hh  lennard-jones.hh  lj-test.cc  menu-entries.ncd.xml  nantest.cc  numhits.cc  omp-util.hh  parray.hh  particle-classes.ncd.xml  particle-flags.ncd.xml  partikel.hh  partrel-test.cc  permutation-test.cc  permutation.hh  power.hh  prefix-sums.hh  pthread-util.hh  quader.hh  renderer.hh  scene-config.hh  schedule-types.ncd.xml  sensor-areas.ncd.xml  sensor-def.hh  sensor-flags.ncd.xml  sensor-types.ncd.xml  (+26 more)
sph/tests/: Makefile.am  MockTestCase.cc  cppunittestmain.cc  random-array.hh  sortCommon.hh  test1.cc  testCountingSort.cc  testPermutation.cc  testSTDSort.cc  testkernel-1d.cc  testkernel-2d.cc  testkernel-3d.cc  testparray.cc  testpower.cc
sph/vtk/: Makefile
sph/vtk/vtk-examples/: vtk-ascii.vtk  vtk-binaer.vtk
spline/: point.hh  spline.hh
utility/: Makefile.am  fe-codes.ncd.xml  fl-info.hh  getenv.hh  hdf5.hh  locale.hh  pid.hh  strftime.hh  teestream.hh  time.hh  timer.hh  uname.hh
